[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlportfolio"
version = "0.1.0"
description = "ML-enhanced portfolio optimization engine: Markowitz vs HMM regimes + Random Forest Black-Litterman"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "hmmlearn>=0.3",
    "yfinance>=0.2.40",
    "pandas-datareader>=0.10",
    "matplotlib>=3.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
